Add simple WebUI (#212)
* Add including-react-in-maven-build

* tile-webui: added

* core: add tile-webui

* core/app: add initial create-react-app

* core,parent: specifying a single tile replaces any from parent

* tile-webui: don’t run npm/yarn default

To use then explicitly set `skip.npm` and `skip.yarn` to `false`.

* runner-quarkus: runs against the default postgres db

* Add tile-webui to reactor-graph

* tile-webui: output to location EE expects, not Spring

* doc: remove unused images

* tile-webui: remove module - extracted to kemitix-maven-tiles:frontend

* parent: upgrade kemitix-maven-tiles from 2.5.0 to 2.6.0

* parent: add frontend tile

* doc/ref: tidy formating

* Update module graph

* core: move react app to where frontend expects it

* core/web: remove react app stub

* webui: add empty module

* webui: insert as dependency above visits

* webui: add create-react-app typescript template app

* webui: add tachyons

* webui: ignore package-lock.json

* webui: include tachyons

* ignore locks, dist and node_modules

* webui: export const App

* add stub page components

* make typescript a dev dependency

* initial layout

* Some styling for navigation items

* fix typo

* remove default index.html

* Don’t block access to resources

* no mutation tests in webui

* Update gitignore rules

* war: update tests to match ApplicationPath change

* api-tests: refactoring

* use intellij formatting

* refactoring nav item styles

* add react-router-dom

* Wrap App in BrowserRouter

* core: add FeatureResource

* owners: Add Feature implementations

* webui: ignore temp dev files

* core: FeatureResource needs no-args constructor and we cache features

* runner: Enable CORS

* webui: get list of features/nav items from backend

* runner: set http-root to match default when using a deployed war

* Serve react

* runner: correctly serve JAX-RS under /api and / f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <tiles-maven-plugin.version>2.16</tiles-maven-plugin.version>
-        <kemitix-maven-tiles.version>2.5.0</kemitix-maven-tiles.version>
+        <kemitix-maven-tiles.version>2.6.0</kemitix-maven-tiles.version>
         <kemitix-checkstyle.version>5.4.0</kemitix-checkstyle.version>
 
         <jakartaee-api.version>8.0.0</jakartaee-api.version>
@@ -81,6 +81,11 @@
             <dependency>
                 <groupId>net.kemitix.naolo</groupId>
                 <artifactId>naolo-testing</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.kemitix.naolo</groupId>
+                <artifactId>naolo-webui</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -164,6 +169,7 @@
                         <tile>net.kemitix.tiles:testing:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.tiles:coverage:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.tiles:pitest:${kemitix-maven-tiles.version}</tile>
+                        <tile>net.kemitix.tiles:frontend:${kemitix-maven-tiles.version}</tile>
                         <tile>net.kemitix.checkstyle:tile:${kemitix-checkstyle.version}</tile>
                     </tiles>
                 </configuration>
