--- a/pets/pom.xml
+++ b/pets/pom.xml
@@ -13,7 +13,9 @@
     <artifactId>naolo-pets</artifactId>
 
     <properties>
-        <jacoco-class-instruction-covered-ratio>66%</jacoco-class-instruction-covered-ratio>
+        <jacoco-class-instruction-covered-ratio>0</jacoco-class-instruction-covered-ratio>
+        <jacoco-class-line-covered-ratio>0</jacoco-class-line-covered-ratio>
+        <jacoco-class-missed-count-maximum>10</jacoco-class-missed-count-maximum>
     </properties>
 
     <dependencies>
