--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: maven-build
 
 on:
   push:
@@ -14,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [ 11, 13 ]
+        java: [ 11, 14 ]
     steps:
       - uses: kamiazya/setup-graphviz@v1
       - uses: actions/checkout@v2
@@ -24,23 +21,9 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: build-jar
         run: mvn -B install
+
   native-image:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres
-        env:
-          POSTGRES_DB: naolo
-          POSTGRES_PASSWORD: naolo
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
     steps:
       - uses: kamiazya/setup-graphviz@v1
       - uses: actions/checkout@v2
@@ -51,4 +34,4 @@ jobs:
           java-version: "java11"
           native-image: true
       - name: build-native-image
-        run: mvn -B verify -Pnative -DskipITs
+        run: mvn -V verify -Pnative -DskipTests -DskipITs -Dpitest.skip
